--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -25,7 +25,8 @@
   .works
     .works__hedding
       %h1 WORKS
-    = render @contents
+    .works__main
+      = render @contents
 -# footer================================================
 = render "/templates/footer"
 
