--- a/app/assets/stylesheets/modules/categories/_form.scss
+++ b/app/assets/stylesheets/modules/categories/_form.scss
@@ -2,7 +2,7 @@
   width: 80vw;
   height: 85vh;
   margin: 5vh auto ;
-  background-color: $l_gray;
+  background-color: gray;
   text-align: center;
 // ================================================
 .skill{
@@ -19,7 +19,7 @@
   }
 }
 .deleteBtn{
-  background-color: $gray;
+  background-color: gray;
   line-height: 10vh;
 }
 // ================================================
