--- a/app/assets/stylesheets/modules/templates/_header.scss
+++ b/app/assets/stylesheets/modules/templates/_header.scss
@@ -19,7 +19,7 @@
       margin-top: 5vh;
       &:hover{
         font-weight: bold;
-        background-color: $gray;
+        background-color: gray;
       }
     }
   }
