--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -28,6 +28,6 @@
     .works__main
       = render @contents
 -# footer================================================
-= render "/templates/footer"
+= render "/templates/menu"
 
 
