--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -13,7 +13,7 @@
       transform: translateY(-50%);
       left: 0;
     .underLine{
-      background-color: black;
+      background-color: $base3;
       position: absolute;
         bottom: 5%;
         width: 0%;
@@ -355,7 +355,7 @@
               width: 6vh;
               height: 6vh;
               border-radius: 50%;
-              border: solid 1px $base2;
+              // border: solid 1px $base2;
               overflow: hidden;
               i{
                 @include position-center;
@@ -414,7 +414,7 @@
 // works================================================================================================
 .works{
   width:90vw;
-  margin: 0 auto;
+  margin: 0 auto 5vh;
   &__hedding{
     width: 100%;
     height: 15vh;
@@ -423,10 +423,9 @@
   }
   &__main{
     background-color: $base3;
-    margin-bottom: 10vh;
     border-radius: 20px;
     width: 100%;
-    padding: 10vh 0 0;
+    padding: 10vh 0 .1px;
     position: relative;
     &__contentsBox{
       margin: 0 auto ;
@@ -434,6 +433,7 @@
       &__upperBlock{
         width: 100%;
         height: 45vh;
+        cursor: pointer;
         &__imageBox{
           height: 45vh;
           width: 100%;
@@ -496,7 +496,7 @@
             width: 6vh;
             height: 6vh;
             border-radius: 50%;
-            border: solid 1px $base2;
+            // border: solid 1px $base2;
             // background-color: $base1;
             overflow: hidden;
             i{
