change the miss

--- a/app/views/contents/show.html.haml
+++ b/app/views/contents/show.html.haml
@@ -41,7 +41,7 @@
               .lowerBlock__textBlock__linkBlock--git--icon.arrow
                 =fa_icon "long-arrow-right"
 -# ================================================
-= render "/templates/footer"
+= render "/templates/menu"
 
 
 
