--- a/app/views/categories/edit.html.haml
+++ b/app/views/categories/edit.html.haml
@@ -1,3 +1,3 @@
 = render "/categories/form"
 -# footer================================================
-= render "/templates/footer"
+= render "/templates/menu"
