--- a/app/views/contents/_form.html.haml
+++ b/app/views/contents/_form.html.haml
@@ -6,8 +6,8 @@
           %p トップ画像
           = f.file_field :topImage
         .top__left--date
-          %p トップテキスト
-          = f.date_field :date 
+          %p 日付
+          = f.text_field :date ,placeholder:"2020.04"
         .top__left--topText
           %p トップテキスト
           = f.text_area :topText ,placeholder:"トップテキスト"
