--- a/app/views/contents/new.html.haml
+++ b/app/views/contents/new.html.haml
@@ -1,3 +1,3 @@
 = render "/contents/form"
 -# footer================================================
-= render "/templates/footer"
+= render "/templates/menu"
