--- a/app/assets/stylesheets/modules/templates/_header.scss
+++ b/app/assets/stylesheets/modules/templates/_header.scss
@@ -8,7 +8,7 @@
     transform: rotate(45deg);
     margin: 5vh 0;
     &--signedOut{
-      color: white;
+      color:$base1;
     }
   }
   .menu{
