--- a/app/views/contents/_content.html.haml
+++ b/app/views/contents/_content.html.haml
@@ -7,6 +7,9 @@
       =content.catchcopy
     %table.works__main__contentsBox__lowerBlock__infomations
       %tr
+        %th NAME
+        %td=content.name
+      %tr
         %th DATE
         %td=content.date
       %tr
