--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -451,18 +451,17 @@
         // background-color: gray;
         margin:0 auto;
         width: 100%;
-        height: 20vh;
+        // height: 20vh;
         position: relative;
         &--topText{
           // background-color: #fff;
           width: 100%;
-          height: 10vh;
+          height:10vh;
           line-height: 10vh;
           font-size: 2.5vh;
         }
         &__infomations{
           width: 50%;
-          height: 10vh;
           // background-color: gray;
           tr{
             height: 5vh;
