--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,7 @@
 // ------------------------------------------------
 @import "modules/categories/form";
 // ------------------------------------------------
-@import "modules/templates/footer";
+@import "modules/templates/menu";
 @import "modules/templates/header";
 // ================================================
 @import "font-awesome-sprockets";
