--- a/app/views/templates/_menu.html.haml
+++ b/app/views/templates/_menu.html.haml
@@ -3,7 +3,7 @@
     .menuBtn--topBar
     .menuBtn--centerBar
     .menuBtn--underBar
-  .menuModal
+    .menuBtn__modal
 
 -# #footer
 -#   -if request.path == root_path 
