--- a/app/assets/stylesheets/modules/templates/_menu.scss
+++ b/app/assets/stylesheets/modules/templates/_menu.scss
@@ -10,6 +10,7 @@
       transition-duration: 0.5s;
       position: absolute;
         left: 25%;
+        z-index: 1;
       width: 5vh;
       height: 0.5vh;
     }
@@ -21,6 +22,15 @@
     }
     &--underBar{
       top: 70%;
+    }
+    &__modal{
+      background-color: $base2;
+      width: 20vw;
+      height: 30vh;
+      border-radius: 20px 0 20px 20px;
+      position: absolute;
+        top: 0;
+        right: -50vw;
     }
   }
 }
