--- a/app/assets/stylesheets/modules/templates/_menu.scss
+++ b/app/assets/stylesheets/modules/templates/_menu.scss
@@ -1,6 +1,8 @@
 #menu{
   .menuBtn{
+    cursor: pointer;
     position: fixed;
+      z-index: 2;
       top: 0;
       right: 0;
     height: 10vh;
@@ -10,7 +12,6 @@
       transition-duration: 0.5s;
       position: absolute;
         left: 25%;
-        z-index: 1;
       width: 5vh;
       height: 0.5vh;
     }
@@ -23,14 +24,26 @@
     &--underBar{
       top: 70%;
     }
-    &__modal{
-      background-color: $base2;
-      width: 20vw;
-      height: 30vh;
-      border-radius: 20px 0 20px 20px;
-      position: absolute;
-        top: 0;
-        right: -50vw;
+  }
+  .menuModal{
+    background-color: $base2;
+    padding:10vh 0 5vh 5vh ;
+    width: 15vw;
+    height: 30vh;
+    border-radius: 20px 0 20px 20px;
+    position: fixed;
+      z-index: 1;
+      top: 0;
+      right: -50vw;
+    &--profile,&--skills,&--works,&--top{
+      cursor: pointer;
+      height: 5vh;
+      line-height: 5vh;
+      margin-bottom: 1vh;;
+      h2{
+        font-size: 2vh;
+        color: $base3;
+      }
     }
   }
 }
@@ -43,38 +56,3 @@
 
 
 
-
-// #footer{
-//   background-color: black;
-//   padding-top: 8vh;
-//   width: 100vw;
-//   height: 20vh;
-//   position: relative;
-//   color: white;
-//   // ================================================
-// .footerLinks{
-//   width: 100%;
-//   height: 5vh;
-//   font-size: 2.5vh;
-//   position: relative;
-//   &--profile{
-//     position: absolute;
-//       left: 40%;
-//   }
-//   &--skills,&--back{
-//     position: absolute;
-//       left: 50%;
-//   }
-//   &--works{
-//     position: absolute;
-//       left: 60%;
-//   }
-//   &--line{
-//     margin-top: 1vh;
-//     background-color: white;
-//     width: 2vw;
-//     height: 2px;
-//   }
-// }
-//   // ================================================
-// }
