--- a/app/assets/stylesheets/modules/templates/_menu.scss
+++ b/app/assets/stylesheets/modules/templates/_menu.scss
@@ -27,21 +27,28 @@
   }
   .menuModal{
     background-color: $base2;
-    padding:10vh 0 5vh 5vh ;
+    padding:8vh 0 3vh 5vh ;
     width: 15vw;
-    height: 30vh;
     border-radius: 20px 0 20px 20px;
     position: fixed;
-      z-index: 1;
+      // z-index: 1;
       top: 0;
       right: -50vw;
-    &--profile,&--skills,&--works,&--top{
+    &__profile,&__skills,&__works,&--top{
       cursor: pointer;
-      height: 5vh;
+      // height: 5vh;
       line-height: 5vh;
       margin-bottom: 1vh;;
       h2{
         font-size: 2vh;
+        color: $base3;
+      }
+      &--list{
+        height: 3vh;
+        line-height: 3vh;
+        margin: 0.5vh 3vh 0;
+        font-size: 1vh;
+        font-family: "roboto";
         color: $base3;
       }
     }
