--- a/app/assets/stylesheets/modules/templates/_menu.scss
+++ b/app/assets/stylesheets/modules/templates/_menu.scss
@@ -38,12 +38,22 @@
       cursor: pointer;
       // height: 5vh;
       line-height: 5vh;
-      margin-bottom: 1vh;;
+      margin-bottom: 1vh;
+      position: relative;
       h2{
         font-size: 2vh;
         color: $base3;
       }
+      i{
+        color: $base3;
+        font-size: 2em;
+        position: absolute;
+          top: 1.5vh;
+          left: 80%;
+        transition-duration: 0.3s;
+      }
       &--list{
+        display: none;
         height: 3vh;
         line-height: 3vh;
         margin: 0.5vh 3vh 0;
