--- a/app/views/templates/_menu.html.haml
+++ b/app/views/templates/_menu.html.haml
@@ -6,7 +6,8 @@
   -if request.path == root_path 
     .menuModal
       %ul.menuModal__profile
-        %h2.menuModal__profile--heading PROFILE
+        %h2.menuModal__profile--heading 
+          PROFILE
         =fa_icon "angle-down"
         %li.menuModal__profile--list
           ABOUT ME
@@ -17,13 +18,15 @@
         %li.menuModal__profile--list
           HOBBY
       %ul.menuModal__skills
-        %h2.menuModal__profile--heading SKILLS
+        %h2.menuModal__profile--heading
+          SKILLS
         =fa_icon "angle-down"
         -@categories.each do |skill|
           %li.menuModal__skills--list
             =skill.name
       .menuModal__works
-        %h2.menuModal__profile--heading WORKS
+        %h2.menuModal__profile--heading
+          WORKS
         =fa_icon "angle-down"
         -@contents.each do |content|
           %li.menuModal__works--list
