--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -426,7 +426,7 @@
     background-color: $base3;
     border-radius: 20px;
     width: 100%;
-    padding: 10vh 0 .1px;
+    padding: 10vh 0 0.1px;
     position: relative;
     &__contentsBox{
       margin: 0 auto ;
