--- a/app/assets/stylesheets/modules/templates/_menu.scss
+++ b/app/assets/stylesheets/modules/templates/_menu.scss
@@ -34,7 +34,7 @@
     position: fixed;
       top: 0;
       right: -50vw;
-    &__profile,&__skills,&__works,&--top{
+    &__profile,&__skills,&__works,&--home{
       cursor: pointer;
       line-height: 5vh;
       margin-bottom: 1vh;
