--- a/app/views/templates/_menu.html.haml
+++ b/app/views/templates/_menu.html.haml
@@ -33,5 +33,5 @@
             =content.name
   -else
     .menuModal
-      .menuModal--top
-        %h2=link_to("TOP",root_path)
+      .menuModal--home
+        %h2=link_to("HOME",root_path)
