--- a/app/assets/stylesheets/modules/templates/_menu.scss
+++ b/app/assets/stylesheets/modules/templates/_menu.scss
@@ -32,9 +32,9 @@
     width: 15vw;
     border-radius: 20px 0 20px 20px;
     position: fixed;
-      top: 0;
-      right: -50vw;
-    &__profile,&__skills,&__works,&--home{
+    top: 0;
+    right: -50vw;
+    &__profile,&__skills,&__works,&__new,&__categories,&__contents,&--home{
       cursor: pointer;
       line-height: 5vh;
       margin-bottom: 1vh;
@@ -57,6 +57,14 @@
         font-size: 1vh;
         font-family: "roboto";
       }
+    }
+    &--signup{
+      cursor: auto;
+      width: 10px;
+      height: 10px;
+      position: absolute;
+        top: 0;
+        left: 0;
     }
   }
 }
