--- a/app/assets/stylesheets/modules/templates/_menu.scss
+++ b/app/assets/stylesheets/modules/templates/_menu.scss
@@ -29,8 +29,9 @@
     color: $base3;
     padding:8vh 0 3vh 5vh ;
     width: 15vw;
+    max-height: 95vh;
     border-radius: 20px 0 20px 20px;
-    overflow-y: scroll;
+    overflow: scroll;
     position: fixed;
       top: 0;
       right: -50vw;
