--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -429,7 +429,7 @@
     padding: 10vh 0 0.1px;
     position: relative;
     &__contentsBox{
-      margin: 0 auto ;
+      margin: 1vh auto 0;
       width: 75%;
       &__upperBlock{
         width: 100%;
