--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -27,6 +27,7 @@
       %h1 WORKS
     .works__main
       = render @contents
--# footer================================================
+  -# footer================================================
+  .last
 
 
