--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -517,6 +517,10 @@
     }
   }
 }
+  .last{
+    width: 100%;
+    height: 30vh;
+  }
 // ================================================
 }
 // ================================================
