--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -520,6 +520,14 @@
   .last{
     width: 100%;
     height: 30vh;
+    font-weight: 400;
+    font-size: 15px;
+    font-family: "roboto";
+    color: $base3;
+    position: relative;
+    &--message{
+      @include position-center;
+    }
   }
 // ================================================
 }
