--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -29,5 +29,7 @@
       = render @contents
   -# footer================================================
   .last
+    .last--message
+      THANK YOU 
 
 
