--- a/app/assets/stylesheets/modules/templates/_menu.scss
+++ b/app/assets/stylesheets/modules/templates/_menu.scss
@@ -1,9 +1,11 @@
 #menu{
-  position: fixed;
-    z-index: 1;
-    top: 1.5%;
-    right: 1.5%;
   .menuBtn{
+    position: fixed;
+      z-index: 2;
+      top: 1.5%;
+      right: 1.5%;
+      height: 40px;
+      width: 30px;
     cursor: pointer;
     height: 40px;
     width: 30px;
@@ -11,7 +13,6 @@
       background-color: $base3;
       transition-duration: 0.5s;
       position: absolute;
-        z-index: 2;
       width: 30px;
       height: 3px;
     }
@@ -34,6 +35,7 @@
     border-radius: 20px 0 20px 20px;
     overflow: scroll;
     position: fixed;
+      z-index: 1;
       top: 0;
       right: -50vw;
     &__profile,&__skills,&__works,&__new,&__categories,&__contents,&--home{
