--- a/app/assets/stylesheets/modules/templates/_menu.scss
+++ b/app/assets/stylesheets/modules/templates/_menu.scss
@@ -1,4 +1,5 @@
 #menu{
+  // ================================================
   .menuBtn{
     position: fixed;
       z-index: 2;
@@ -26,6 +27,7 @@
       top: 80%;
     }
   }
+  // ------------------------------------------------
   .menuModal{
     background-color: $base2;
     color: $base3;
@@ -71,6 +73,7 @@
         left: 0;
     }
   }
+  // ================================================
 }
 
 
