--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,4 +1,10 @@
-$base1:rgb(226, 90, 83);
+$base1:rgb(241, 241, 243);
 $base2:rgb(62, 60, 65);
-$base3:rgb(247, 238, 224);
+$base3:white;
 
+
+$red:rgb(224, 68, 60);
+$black:rgb(62, 60, 65);
+$gray:rgb(241, 241, 243);
+$white:white;
+$dgray:rgb(213, 214, 217);
