--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -37,7 +37,7 @@ a{
 }
 
 body {
-  font-family: "hare";
+  color: black;
 }
 
 ol, ul, li{
@@ -62,28 +62,4 @@ table {
 
 *{
 	box-sizing: border-box;
-}
-
-h1{
-  font-family: 'Roboto';
-  font-size: 60px;
-  font-weight: 500;
-  letter-spacing: 3px;
-  color: $base3;
-}
-h2{
-  font-family: 'Roboto';
-  font-size: 10px;
-  letter-spacing: 1px;
-}
-h3{
-  font-family: 'Roboto';
-  font-weight: 500;
-  font-size: 20px;
-  cursor: pointer;
-}
-th{
-  font-family: 'Roboto';
-  font-size: 10px;
-  letter-spacing: 1px;
 }
