--- a/app/assets/stylesheets/config/_mixin.scss
+++ b/app/assets/stylesheets/config/_mixin.scss
@@ -11,3 +11,46 @@
   animation-duration: 5s;
   display: none;
 }
+// font================================================
+@mixin h1{
+  font-family: 'Roboto';
+  font-size: 50px;
+  font-weight: 300;
+  letter-spacing: 5px;
+  color: $black;
+}
+@mixin h2{
+  font-family: 'Roboto';
+  font-weight: 100;
+  font-size: 30px;
+  letter-spacing: 1px;
+  color: $black;
+}
+@mixin h3{
+  font-family: 'Roboto','Noto Sans JP';
+  font-weight: 100;
+  font-size: 20px;
+  letter-spacing: 0px;
+  color: $black;
+}
+@mixin h4{
+  font-family: 'Roboto','Noto Sans JP';
+  font-weight: 300;
+  font-size: 10px;
+  letter-spacing: 1px;
+  color: $black;
+}
+@mixin p {
+  font-family: 'Roboto','Noto Sans JP';
+  font-weight: 100;
+  font-size: 11px;
+  letter-spacing: -1px;
+  color: $black;
+}
+
+@mixin cc{
+  font-family: 'hare';
+  font-size: 20px;
+  letter-spacing: 2px;
+  color: $black;
+}
