--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -1,5 +1,5 @@
 #index{
-  background-color: $base1;
+  background-color: $gray;
   width: 100vw;
   overflow: hidden;
 // top-contents================================================================================================
@@ -8,48 +8,59 @@
   width: 80vw;
   height: 100vh;
   position: relative;
-  &__text1,&__text2,&__text3{
-    position: absolute;
-      transform: translateY(-50%);
-      left: 0;
-    .underLine{
-      background-color: $base3;
+  &__textBox{
+    @include position-center;
+    border-radius: 15px;
+    height: 60vh;
+    width: 60vh;
+    background-color:$white;
+    box-shadow: 1vh 1vh $black;
+    &__text1,&__text2,&__text3{
       position: absolute;
-        bottom: 5%;
-        width: 0%;
-      height: 100%;
+        transform: translateY(-50%);
+        left: 25%;
+      .underLine{
+        background-color: $red;
+        position: absolute;
+          bottom: 5%;
+        width: 100%;
+        height: 5%;
+      }
     }
-    h1{
-      color:$base1;
-      font-size:80px ;
+    &__text1{
+        top: 35%;
     }
-  }
-  &__text1{
-      top: 40%;
-  }
-  &__text2{
-      top: 50%;
-  }
-  &__text3{
-      top: 60%;
+    &__text2{
+        top: 50%;
+    }
+    &__text3{
+        top: 65%;
+    }
   }
 }
 // profile================================================================================================
 .profile{
-  margin: 0 auto;
+  margin: 10vh auto 20vh;
   width: 90vw;
   position: relative;
 // hedding------------------------------------------------
-  &__hedding{
-    width: 100%;
+  &__heading{
+    position: absolute;
+      top: -8vh;
+      left: -3%;
+      z-index: 1;
+    background-color: $white;
+    border-radius: 15px;
+    box-shadow: 1vh 1vh $black;
     height: 15vh;
+    width: 25vw;
     line-height: 15vh;
-    font-size: 5vh;
+    text-align: center;
   }
 // main------------------------------------------------
   &__main{
-    background-color: $base3;
-    margin-bottom: 10vh;
+    background-color: $white;
+    box-shadow: 1vh 1vh $black;
     border-radius: 20px;
     width: 100%;
     height: 70vh;
@@ -59,7 +70,7 @@
         left: 50%;
         top: 3%;
         transform: translateX(-50%);
-      background-color: $base1;
+      background-color: $gray;
       border-radius: 50%;
       height: 30vh;
       width: 30vh;
@@ -71,7 +82,8 @@
     }
     &__btn{
       cursor: pointer;
-      border: solid 1px $base1;
+      box-shadow: .3vh .3vh $black;
+      background-color: $gray;
       border-radius: 50%;
       height: 7vh;
       width: 7vh;
@@ -81,9 +93,9 @@
         transform: translateY(-50%);
       i{
         @include position-center;
-        color: $base1;
+        color: $black;
         font-size: 3em;
-        -webkit-text-stroke: 3.5px $base3;
+        -webkit-text-stroke: 3.5px $gray;
       }
     }
     .next{
@@ -101,9 +113,7 @@
       line-height: 8vh;
       li{
         display: none;
-        color: $base2;
-        font-family: "roboto";
-        font-size: 40px;
+        @include h2;
       }
     }
 // contents------------------------------------------------
@@ -125,19 +135,12 @@
             top: 50%;
             transform: translateX(-50%)translateY(-50%);
           &--heading{
-            font-weight: 500;
-            font-size: 18px;
-            width: 100%;
-            line-height: 4vh;
             span{
-              color: $base1;
+              color: $red;
             }
           }
           &--text{
-            font-weight: 400;
             margin-top: 2vh;
-            width: 100%;
-            height: 12vh;
             line-height: 4vh;
           }
         }
@@ -181,13 +184,13 @@
         border-radius: 50%;
         height: 1vh;
         width: 1vh;
-        background-color: $base1;
+        background-color: $dgray;
       }
       .active{
         height: 1.5vh;
         width: 1.5vh;
-        background-color: $base3;
-        border: 2px solid $base1;
+        background-color: $white;
+        border: 2px solid $red;
       }
     }
   }
@@ -195,34 +198,37 @@
 // slills================================================================================================
 .skills{
   width:90vw;
-  margin: 0 auto;
-  &__hedding{
-    width: 100%;
+  margin: 10vh auto 20vh;
+  position: relative;
+  &__heading{
+    position: absolute;
+      top: -8vh;
+      left: -3%;
+      z-index: 1;
+    background-color: $white;
+    border-radius: 15px;
+    box-shadow: 1vh 1vh $black;
     height: 15vh;
+    width: 25vw;
     line-height: 15vh;
-    font-size: 5vh;
+    text-align: center;
   }
 // ------------------------------------------------
   &__main{
-    background-color: $base3;
-    margin-bottom: 10vh;
-    border-radius: 20px;
+    background-color: $white;
+    box-shadow: 1vh 1vh $black;
+    border-radius: 15px;
     width: 100%;
     height: 65vh;
     position: relative;
     &--message{
-      background-color: $base2;
-      color: $base3;
-      font-family: "roboto";
       text-align: center;
       position: absolute;
         bottom: 13.5%;
         left: 75%;
         transform: translateY(-50%)translateX(-50%);
-      width: 14vw;
       height:5vh;
       line-height: 5vh;
-      border-radius: 2.5vh;
     }
 // upper------------------------------------------------
     &__upperBlock{
@@ -240,21 +246,20 @@
         cursor: pointer;
         width: 12vw;
         &--icon{
-          background-color: $base1;
+          background-color: $dgray;
           border-radius: 50%;
           margin: 0 auto;
           width: 10vw;
           height: 10vw;
+          transition-duration:0.5s ;
           position: relative;
           .svgIcon{
             @include position-center;
             width: 20%;
-            fill: $base3;
+            fill: $white;
           }
         }
         &--name{
-          width: 12vw;
-          height: 5vh;
           line-height: 5vh;
           text-align: center;
         }
@@ -268,26 +273,21 @@
         transform:translateX(-50%);
       width: 55vw;
       max-height: 39vh;
-      border-radius: 20px;
-      background-color: $base2;
+      border-radius:15px;
+      background-color:$red;
+      box-shadow: 1vh 1vh $black;
       &--name{
         margin: 2vh 0 0 2vh;
         height: 5vh;
         line-height: 5vh;
-        color: $base3;
-        font-weight: 500;
-        font-size: 5vh;
-        font-family: "roboto";
+        color: $white;
       }
       &--text{
         margin: 1vh 0 1vh 4vh;
         height: 3vh;
         line-height: 3vh;
-        color: $base3;
-        font-weight: 400;
-        font-size: 1.5vh;
-        font-family: "roboto";
-      }
+        color: $white;
+        }
       &--deleteBtn{
         cursor: pointer;
         width: 5vh;
@@ -299,9 +299,9 @@
           transform:rotate(45deg);
         i{
           @include position-center;
-          color: $base3;
+          color: $white;
           font-size: 3.5em;
-          -webkit-text-stroke: 6px $base2;
+          -webkit-text-stroke: 6px $red;
         }
       }
       &__wrapper{
@@ -321,8 +321,8 @@
             width: 0.5vh;
             height: 0.5vh;
             border-radius: 50%;
-            background-color: $base2;
-            border: solid 2px $base3;
+            background-color: $red;
+            border: solid 2px $white;
           }
           &--centerName{
             position: absolute;
@@ -332,18 +332,15 @@
             width: 50%;
             height: 7vh;
             line-height: 7vh;
-            font-size: 2vh;
-            font-family: "roboto";
-            font-weight: 400;
-            color:$base3;
+            color: $white;
           }
           &__rightBtn{
-            border-radius: 4vh;
+            border-radius: 3.5vh;
             position: absolute;
               right: 0;
             height: 7vh;
             width: 18vw;
-            background-color: $base3;
+            background-color: $white;
             &--text{
               line-height: 7vh;
               margin-left: 1.5vw;
@@ -355,14 +352,12 @@
                 transform:translateY(-50%);
               width: 6vh;
               height: 6vh;
-              border-radius: 50%;
-              // border: solid 1px $base2;
               overflow: hidden;
               i{
                 @include position-center;
-                color: $base2;
+                color: $black;
                 font-size: 3em;
-                -webkit-text-stroke: 3.5px $base3;
+                -webkit-text-stroke: 3.5px $white;
               }
             }
           }
@@ -376,8 +371,7 @@
         left: 15%;
       width:20%;
       &--heading{
-        height: 8vh;
-        line-height: 8vh;
+        line-height: 6vh;
       }
       &__contentBox{
         display: flex;
@@ -390,12 +384,13 @@
             width: 5vh;
             margin: 0 auto;
             border-radius: 50%;
-            background-color: $base2;
+            background-color: $dgray;
+            transition-duration: 0.5s;
             position: relative;
             .svgIcon{
               @include position-center;
               width: 50%;
-              fill: $base3;
+              fill: $white;
             }
           }
           &--name{
@@ -415,19 +410,28 @@
 // works================================================================================================
 .works{
   width:90vw;
-  margin: 0 auto 5vh;
-  &__hedding{
-    width: 100%;
-    height: 15vh;
-    line-height: 15vh;
-    font-size: 5vh;
+  margin: 10vh auto 0;
+  position: relative;
+  &__heading{
+  position: absolute;
+    top: -8vh;
+    left: -3%;
+    z-index: 1;
+  background-color: $white;
+  border-radius: 15px;
+  box-shadow: 1vh 1vh $black;
+  height: 15vh;
+  width: 25vw;
+  line-height: 15vh;
+  text-align: center;
   }
   // ================================================
   &__main{
-    background-color: $base3;
-    border-radius: 20px;
+    background-color: $white;
+    border-radius: 15px;
+    box-shadow: 1vh 1vh $black;
     width: 100%;
-    padding: 10vh 0 0.1px;
+    padding: 15vh 0 0.1px;
     position: relative;
     &__contentsBox{
       margin: 1vh auto 0;
@@ -454,10 +458,10 @@
         width: 100%;
         position: relative;
         &--topText{
+          @include cc;
           width: 100%;
           height:10vh;
           line-height: 10vh;
-          font-size: 2.5vh;
         }
         &__infomations{
           width: 50%;
@@ -465,6 +469,7 @@
             height: 5vh;
             line-height: 5vh;
             text-align: left;
+            @include h4;
             th{
               width: 30%;
             }
@@ -480,8 +485,8 @@
             right: 0;
           height: 7vh;
           width: 18vw;
-          background-color: $base3;
-          border: solid 1px $base2;
+          background-color: $white;
+          border: solid 0.5px $black;
           &--text{
             line-height: 7vh;
             margin-left: 1.5vw;
@@ -497,9 +502,9 @@
             overflow: hidden;
             i{
               @include position-center;
-              color: $base2;
+              color: $black;
               font-size: 3em;
-              -webkit-text-stroke: 3.5px $base3;
+              -webkit-text-stroke: 3.5px $white;
             }
           }
         }
@@ -508,7 +513,7 @@
       &--underLine{
         width:90%;
         height: 3px;
-        background-color: $base1;
+        background-color: $dgray;
         margin: 5vh auto 5vh;
       }
     }
@@ -517,11 +522,7 @@
 // ================================================================================================
   .last{
     width: 100%;
-    height: 30vh;
-    font-weight: 400;
-    font-size: 15px;
-    font-family: "roboto";
-    color: $base3;
+    height: 35vh;
     position: relative;
     &--message{
       @include position-center;
