--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -25,19 +25,41 @@
       .underLine{
         background-color: $red;
         position: absolute;
-          bottom: 5%;
+          bottom: -5%;
         width: 100%;
-        height: 5%;
+        height: 3%;
       }
     }
     &__text1{
         top: 35%;
+      &::before{
+        content:"'";
+        position: absolute;
+          top: 0;
+          left: 25%;
+        color: $red;
+      }
+      &::after{
+        content:"engeneer";
+        font-size: 15px;
+        position: absolute;
+          bottom: -15%;
+          left: 110%;
+        color: $red;
+      }
     }
     &__text2{
         top: 50%;
     }
     &__text3{
         top: 65%;
+      &::after{
+        content:".";
+        position: absolute;
+          bottom: 0;
+          right: -10%;
+        color: $red;
+      }
     }
   }
 }
