--- a/app/views/contents/index.html.haml
+++ b/app/views/contents/index.html.haml
@@ -4,13 +4,13 @@
   .top
     .top__textBox
       %h1.top__textBox__text1
-        I M
+        I'M
         .underLine
       %h1.top__textBox__text2
         KANATA
         .underLine
       %h1.top__textBox__text3
-        OKAYAMA
+        OKAYAMA.
         .underLine
   -# profile================================================
   .profile
