--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -27,7 +27,7 @@
         position: absolute;
           bottom: -5%;
         width: 100%;
-        height: 3%;
+        height: 2px;
       }
     }
     &__text1{
