--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -51,7 +51,7 @@
 }
 // profile================================================================================================
 .profile{
-  margin: 10vh auto 20vh;
+  margin: 0 auto 20vh;
   width: 90vw;
   position: relative;
 // hedding------------------------------------------------
