click image function

--- a/app/views/contents/_category.html.haml
+++ b/app/views/contents/_category.html.haml
@@ -24,7 +24,7 @@
               %h3.skills__main__lowerBlock__wrapper__content--centerName
                 =content.name
               =link_to(content_path(content.id)) do
-                .skills__main__lowerBlock__wrapper__content__rightBtn
+                .skills__main__lowerBlock__wrapper__content__rightBtn.arrowBtn
                   %h4.skills__main__lowerBlock__wrapper__content__rightBtn--text 
                     SHOW MORE
                   .skills__main__lowerBlock__wrapper__content__rightBtn--icon 
