--- a/app/views/contents/_content.html.haml
+++ b/app/views/contents/_content.html.haml
@@ -18,7 +18,7 @@
           -content.categories.each do |skill|
             ="#{skill.name}, "
     =link_to(content_path(content.id)) do
-      .works__main__contentsBox__lowerBlock__linkBtn
+      .works__main__contentsBox__lowerBlock__linkBtn.arrowBtn
         %h4.works__main__contentsBox__lowerBlock__linkBtn--text 
           SHOW MORE
         .works__main__contentsBox__lowerBlock__linkBtn--icon 
