--- a/app/assets/stylesheets/modules/contents/_show.scss
+++ b/app/assets/stylesheets/modules/contents/_show.scss
@@ -1,152 +1,188 @@
 #show{
-// upper================================================================================================
-.upperBlock{
-  height: 100vh;
+  background-color: $gray;
   width: 100vw;
+  overflow: hidden;
+// top================================================
+.top{
+  opacity: 0;
+  transform: translateX(-20vw);
+  transition-duration: 2s;
+  margin: 0 auto;
+  width: 80vw;
+  height: 100vh;
   position: relative;
-  &__name{
-    font-size: 35px;
+  &__textBox{
     @include position-center;
-    @include animation-blur;
-  }
-  &__overview{
-    @include animation-blur;
-    position: absolute;
-      top: 10vh;
-    width: 100vw;
-    height: 65vh;
-    img{
-      width: 100%;
-      height: 100%;
+    border-radius: 15px;
+    height: 60vh;
+    width: 60vh;
+    background-color:$white;
+    box-shadow: 0 0 10px $dgray;
+    &--name{
+      font-size: 30px;
+      position: absolute;
+        transform: translate(-50%, -50%);
+        left: 50%;
+        top: 50%;
+      .underLine{
+        background-color: $red;
+        position: absolute;
+          bottom: -5%;
+        width: 100%;
+        height: 2px;
+      }
     }
   }
-  &__contentBox{
-    @include animation-blur;
-    position: absolute;
-      top: 75vh;
-      left: 50%;
-      transform: translateX(-50%);
-    width: 60vw;
-    height: 20vh;
-  }
 }
-// lower================================================
-.lowerBlock{
-  display: none;
-  width: 100vw;
-  height: 100vh;
-  &__imagesBlock{
-    padding: 5vh 15vh;
-    background-color:rgba(228, 228, 228, 0.5);
-    width: 100vw;
-    height: 60vh;
+// ditails================================================================================================
+.ditail{
+  margin: 0 auto 7.5vh;
+  width: 90vw;
+  position: relative;
+// hedding------------------------------------------------
+  &__heading{
+    position: absolute;
+      top: -8vh;
+      left: -3%;
+      z-index: 1;
+    background-color: $white;
+    border-radius: 15px;
+    box-shadow: 0 0 10px $dgray;
+    height: 15vh;
+    width: 25vw;
+    line-height: 15vh;
+    text-align: center;
+  }
+// main------------------------------------------------
+&__main{
+  background-color: $white;
+  box-shadow: 0 0 10px $dgray;
+  border-radius: 20px;
+  width: 100%;
+  padding: 7vh;
+  &__upperBlock{
+    width: 90%;
+    margin: 0 auto;
+    border-bottom: 2px solid $dgray;
+    position: relative;
+    &--textHeading{
+      @include cc;
+      width:65%;
+      height: 10vh;
+      line-height: 10vh;
+    }
+    &--text{
+      width: 65%;
+      height: 12vh;
+      line-height: 4vh;
+    }
+    &--language{
+      width: 65%;
+      height: 4vh;
+      margin-bottom: 2vh;
+      line-height: 4vh;
+    }
+    &__gitLinkBtn,&__appLinkBtn{
+      border-radius: 4vh;
+      position: absolute;
+        right: 0;
+      height: 7vh;
+      width: 18vw;
+      background-color: $white;
+      border: solid 0.5px $black;
+      &--text{
+        line-height: 7vh;
+        margin-left: 1.5vw;
+      }
+      &--icon{
+        position: absolute;
+          top: 50%;
+          right: 0.5vh;
+          transform:translateY(-50%);
+        width: 6vh;
+        height: 6vh;
+        border-radius: 50%;
+        overflow: hidden;
+        i{
+          @include position-center;
+          color: $black;
+          font-size: 3em;
+          -webkit-text-stroke: 3.5px $white;
+        }
+      }
+    }
+    &__appLinkBtn{
+      bottom: 10%;
+    }
+    &__gitLinkBtn{
+      bottom: 40%;
+    }
+  }
+//lower------------------------------------------------ 
+  &__lowerBlock{
+    padding-top: 5vh;
+    width: 90%;
+    height: 40vh;
     margin: 0 auto;
     display: flex;
       justify-content: space-between;
-    &--bigDisplay{
-      width: 48vw;
-      height: 50vh;
-      overflow: hidden;
+    &__contentBox{
+      cursor: pointer;
+      transition-duration: 0.5s;
+      background-color: $white;
+      box-shadow: 0 0 10px $dgray;
+      border-radius: 15px;
+      height: 25vh;
+      width: 25vh;
       position: relative;
-      &--wrapper{
+      &--name{
         position: absolute;
-          top: 0;
-          left: 0;
-        width: 230vw;
-        height:100%;
-        img{
-          margin: 0;
-          width: 48vw;
-          height: 100%;
-        }
+          bottom: -5vh;
+          left: 50%;
+          transform: translate(-50%, 0);
       }
-    }
-    &--smallDisplay{
-      width: 28vw;
-      height: 50vh;
-      display: flex;
-        justify-content: space-between;
-        align-content: space-between;
-        flex-wrap: wrap;
-      &--wrapper{
-        background-color: white;
-        width: 13vw;
-        height: 13vw;
-        position: relative;
+      &--image{
+        transition-duration: 0.5s;
+        position: absolute;
+          z-index: 2;
+          top: 1vh;
+          left: 1vh;
+        width: 23vh;
+        height: 23vh;
+        border-radius: 15px;
         overflow: hidden;
         img{
           @include position-center;
-          width:auto;
-          height: 13vw;
+          height: 100%;
+          width: auto;
         }
-        .viewing{
-          @include position-center;
-          display: none;
-          background-color:rgba(white,0.9);
-          border: solid 0.5px black;
-          text-align: center;
-          line-height: 11vw;
-          width: 11vw;
-          height: 11vw;
+      }
+      &__textBox{
+        position: absolute;
+        z-index: 1;
+        top: 50%;
+        right: 50%;
+        transform: translate(0 , -50%);
+        width: 27%;
+        height: 90%;
+        h3,p{
+          color:$white ;
+        }
+        &--heading{
+          height: 20%;
+          width: 100%;
+          line-height: 6vh;
+        }
+        &--text{
+          line-height: 4vh;
+          height: 80%;
+          width: 100%;
         }
       }
     }
   }
-  &__textBlock{
-    width: 100vw;
-    height: 40vh;
-    padding: 0 15vh;
-    position: relative;
-    &__infoBlock{
-      display: none;
-      // background-color: red;
-      position: absolute;
-        top: 0;
-        left: 50%;
-        transform: translateX(-50%);
-      width: 60vw;
-      height: 20vh;
-    }
-    &__linkBlock{
-      // background-color: blue;
-      position: absolute;
-        top: 20vh;
-        left: 50%;
-        transform: translateX(-50%);
-      width:45vw;
-      height: 20vh;
-      display: flex;
-        justify-content: space-evenly;
-        align-items: center;
-      &--app{
-        width: 20vw;
-        background-color: white;
-        height: 10vh;
-        position: relative;
-      }
-      &--git{
-        width: 20vw;
-        height: 10vh;
-        background-color: white;
-        position: relative;
-      }
-    }
-  }
 }
-// ================================================
-th{
-  padding-top: 8vh;
-  vertical-align: top;
-  text-align: left;
-  width: 30%;
-}
-td{
-  padding-top: 8vh;
-  vertical-align: top;
-  text-align: left;
-  width: 60%;
-  color: gray;
+// ================================================================================================
 }
 // ================================================
 }
-
