--- a/app/views/contents/show.html.haml
+++ b/app/views/contents/show.html.haml
@@ -1,46 +1,73 @@
-#show
-  .upperBlock
-    .upperBlock__name
-      =@content.name
-    .upperBlock__overview
-      =image_tag(@content.topImage.to_s)
-    %table.upperBlock__contentBox
-      %tr
-        %th=@content.name
-        %td=@content.topText
-  .lowerBlock
-    .lowerBlock__imagesBlock
-      .lowerBlock__imagesBlock--bigDisplay
-        .lowerBlock__imagesBlock--bigDisplay--wrapper.bigImage
-          - @content.infomations.each_with_index do |info,i|
-            =image_tag(info.image.to_s,class:"index#{i}")
-      .lowerBlock__imagesBlock--smallDisplay
-        - @content.infomations.each_with_index do |info,i|
-          .lowerBlock__imagesBlock--smallDisplay--wrapper.smallImage
-            =image_tag(info.image.to_s,class:"index#{i}")
-            .viewing
-              VIEWING
-    .lowerBlock__textBlock.infomation
-      -@content.infomations.each_with_index do |info,i|
-        %table.lowerBlock__textBlock__infoBlock{class:"index#{i}"}
-          %tr
-            %th=info.heading
-            %td=info.text
-      .lowerBlock__textBlock__linkBlock
-        =link_to(@content.link)do
-          .lowerBlock__textBlock__linkBlock--app
-            .lowerBlock__textBlock__linkBlock--app--text.linkBtn
-              %p VIEW SITE
-              .lowerBlock__textBlock__linkBlock--app--icon.arrow
-                =fa_icon "long-arrow-right"
-        .lowerBlock__textBlock__linkBlock--git
-          =link_to(@content.git)do
-            .lowerBlock__textBlock__linkBlock--git--text.linkBtn
-              %p VIEW GIT
-              .lowerBlock__textBlock__linkBlock--git--icon.arrow
-                =fa_icon "long-arrow-right"
--# ================================================
 = render "/templates/menu"
+#show
+  -# top================================================
+  .top
+    .top__textBox
+      %h1.top__textBox--name
+        =@content.name
+        .underLine
+  -# ditail================================================
+  .ditail
+    %h1.ditail__heading.slideIn
+      DITAIL
+    = render "ditail"
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  -# .upperBlock
+  -#   .upperBlock__name
+  -#     =@content.name
+  -#   .upperBlock__overview
+  -#     =image_tag(@content.topImage.to_s)
+  -#   %table.upperBlock__contentBox
+  -#     %tr
+  -#       %th=@content.name
+  -#       %td=@content.topText
+  -# .lowerBlock
+  -#   .lowerBlock__imagesBlock
+  -#     .lowerBlock__imagesBlock--bigDisplay
+  -#       .lowerBlock__imagesBlock--bigDisplay--wrapper.bigImage
+  -#         - @content.infomations.each_with_index do |info,i|
+  -#           =image_tag(info.image.to_s,class:"index#{i}")
+  -#     .lowerBlock__imagesBlock--smallDisplay
+  -#       - @content.infomations.each_with_index do |info,i|
+  -#         .lowerBlock__imagesBlock--smallDisplay--wrapper.smallImage
+  -#           =image_tag(info.image.to_s,class:"index#{i}")
+  -#           .viewing
+  -#             VIEWING
+  -#   .lowerBlock__textBlock.infomation
+  -#     -@content.infomations.each_with_index do |info,i|
+  -#       %table.lowerBlock__textBlock__infoBlock{class:"index#{i}"}
+  -#         %tr
+  -#           %th=info.heading
+  -#           %td=info.text
+  -#     .lowerBlock__textBlock__linkBlock
+  -#       =link_to(@content.link)do
+  -#         .lowerBlock__textBlock__linkBlock--app
+  -#           .lowerBlock__textBlock__linkBlock--app--text.linkBtn
+  -#             %p VIEW SITE
+  -#             .lowerBlock__textBlock__linkBlock--app--icon.arrow
+  -#               =fa_icon "long-arrow-right"
+  -#       .lowerBlock__textBlock__linkBlock--git
+  -#         =link_to(@content.git)do
+  -#           .lowerBlock__textBlock__linkBlock--git--text.linkBtn
+  -#             %p VIEW GIT
+  -#             .lowerBlock__textBlock__linkBlock--git--icon.arrow
+  -#               =fa_icon "long-arrow-right"
 
 
 
