--- a/app/assets/stylesheets/modules/templates/_menu.scss
+++ b/app/assets/stylesheets/modules/templates/_menu.scss
@@ -28,7 +28,7 @@
   // ------------------------------------------------
   .menuModal{
     background-color: $dgray;
-    box-shadow: 0 0 10px $dgray;
+    box-shadow: 0 5px 10px $dgray;
     padding:8vh 0 3vh 5vh ;
     width: 15vw;
     max-height: 95vh;
