--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -17,7 +17,7 @@
     height: 60vh;
     width: 60vh;
     background-color:$white;
-    box-shadow: 0 0 10px $dgray;
+    box-shadow: 0 5px 10px $dgray;
     &__text1,&__text2,&__text3{
       position: absolute;
         transform: translateY(-50%);
@@ -62,7 +62,7 @@
       z-index: 1;
     background-color: $white;
     border-radius: 15px;
-    box-shadow: 0 0 10px $dgray;
+    box-shadow: 0 5px 10px $dgray;
     height: 15vh;
     width: 25vw;
     line-height: 15vh;
@@ -71,7 +71,7 @@
 // main------------------------------------------------
   &__main{
     background-color: $white;
-    box-shadow: 0 0 10px $dgray;
+    box-shadow: 0 5px 10px $dgray;
     border-radius: 20px;
     width: 100%;
     height: 70vh;
@@ -93,7 +93,7 @@
     }
     &__btn{
       cursor: pointer;
-      box-shadow: 0 0 5px $gray;
+      box-shadow: 0 3px 6px $dgray;
       background-color: $white;
       border-radius: 50%;
       height: 7vh;
@@ -218,7 +218,7 @@
       z-index: 1;
     background-color: $white;
     border-radius: 15px;
-    box-shadow: 0 0 10px $dgray;
+    box-shadow: 0 5px 10px $dgray;
     height: 15vh;
     width: 25vw;
     line-height: 15vh;
@@ -227,7 +227,7 @@
 // ------------------------------------------------
   &__main{
     background-color: $white;
-    box-shadow: 0 0 10px $dgray;
+    box-shadow: 0 5px 10px $dgray;
     border-radius: 15px;
     width: 100%;
     height: 65vh;
@@ -286,7 +286,7 @@
       max-height: 39vh;
       border-radius:15px;
       background-color:$red;
-      box-shadow: 0 0 10px $dgray;
+      box-shadow: 0 5px 10px $dgray;
       &--name{
         margin: 2vh 0 0 2vh;
         height: 5vh;
@@ -440,7 +440,7 @@
   &__main{
     background-color: $white;
     border-radius: 15px;
-    box-shadow: 0 0 10px $dgray;
+    box-shadow: 0 5px 10px $dgray;
     width: 100%;
     padding: 15vh 0 0.1px;
     position: relative;
