--- a/app/views/templates/_menu.html.haml
+++ b/app/views/templates/_menu.html.haml
@@ -70,4 +70,4 @@
         %h3=link_to("HOME",root_path)
       -if user_signed_in?
         %h3.menuModal__contents
-          =link_to("EDIT",edit_content_path(params[:id]))
+          =link_to("- EDIT",edit_content_path(params[:id]))
