--- a/app/assets/stylesheets/modules/contents/_show.scss
+++ b/app/assets/stylesheets/modules/contents/_show.scss
@@ -165,7 +165,8 @@
         transform: translate(0 , -50%);
         width: 27%;
         height: 90%;
-        h3,p{
+        h2,p{
+          display: none;
           color:$white ;
         }
         &--heading{
