--- a/app/assets/stylesheets/modules/contents/_index.scss
+++ b/app/assets/stylesheets/modules/contents/_index.scss
@@ -492,12 +492,12 @@
         &__linkBtn{
           border-radius: 4vh;
           position: absolute;
-            bottom: 0;
+            bottom: 1vh;
             right: 0;
           height: 7vh;
           width: 18vw;
           background-color: $white;
-          border: solid 0.5px $black;
+          box-shadow: 0 3px 6px $dgray;
           &--text{
             line-height: 7vh;
             margin-left: 1.5vw;
