--- a/app/assets/stylesheets/config/_mixin.scss
+++ b/app/assets/stylesheets/config/_mixin.scss
@@ -41,8 +41,49 @@
   letter-spacing: -1px;
   color: $black;
 }
-
 @mixin cc{
+  font-family: 'hare';
+  font-size: 20px;
+  letter-spacing: 2px;
+  color: $black;
+}
+// smartphone================================================
+@mixin s-h1{
+  font-family: 'Roboto';
+  font-size: 25px;
+  font-weight: 300;
+  letter-spacing: 5px;
+  color: $black;
+}
+@mixin s-h2{
+  font-family: 'Roboto';
+  font-weight: 100;
+  font-size: 20px;
+  letter-spacing: 1px;
+  color: $black;
+}
+@mixin s-h3{
+  font-family: 'Roboto','Noto Sans JP';
+  font-weight: 100;
+  font-size: 20px;
+  letter-spacing: 0px;
+  color: $black;
+}
+@mixin s-h4{
+  font-family: 'Roboto','Noto Sans JP';
+  font-weight: 300;
+  font-size: 10px;
+  letter-spacing: 1px;
+  color: $black;
+}
+@mixin s-p {
+  font-family: 'Roboto','Noto Sans JP';
+  font-weight: 100;
+  font-size: 8px;
+  letter-spacing: -1px;
+  color: $black;
+}
+@mixin s-cc{
   font-family: 'hare';
   font-size: 20px;
   letter-spacing: 2px;
